--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -8,7 +8,16 @@
   }
   
   
-@Article{thereferencecanbewhatever,
+@Manual{dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+    year = {2021},
+    note = {R package version 1.0.7},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
+  
+    
+ @Article{tidyverse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -17,13 +26,71 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }  
+  }
   
+     @Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
   
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
+  @Manual{kableExtra,
+    title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+    author = {Hao Zhu},
+    year = {2021},
+    note = {R package version 1.3.4},
+    url = {https://CRAN.R-project.org/package=kableExtra},
+  }
+  
+  @Manual{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
     year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
+  
+   @Manual{gridExtra,
+    title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+    author = {Baptiste Auguie},
+    year = {2017},
+    note = {R package version 2.3},
+    url = {https://CRAN.R-project.org/package=gridExtra},
+  }
+  
+  @Website {chass,
+title = {Microdata Analysis and Subsetting with SDA},
+author = {Statistics Canada},
+year={2014},
+url = {https://sda-artsci-utoronto-ca.myaccess.library.utoronto.ca/sdaweb/html/gss.htm}
+}
+
+  @Website {humanrights,
+title = {Human rights in Ontario},
+author = {Ontario Human Rights Commission},
+year={2008},
+url = {https://www.ohrc.on.ca/en}
+}
+
+  @Website {canada,
+title = {Rights in the workplace},
+author = {Government of Canada},
+year={2020},
+url = {https://www.canada.ca/en/canadian-heritage/services/rights-workplace.html}
+}
+
+  @Website {king,
+title = {The 8 Most Common Forms of Workplace Discrimination},
+author = {King & Siegel LLP},
+year={2020},
+url = {https://www.kingsiegel.com/blog/2020/december/the-8-most-common-forms-of-workplace-discriminat/#:~:text=1.,are%20based%20on%20racial%20discrimination.}
+}
+
+
+ @misc{moreau_2021, title={This juristat article examines the nature and extent of police-reported hate crime in Canada. key topics include motivations for hate crime (e.g., race/ethnicity, religion, and sexual orientation), types of offences, geographical comparisons, and victim/accused characteristics. the article uses data from the incident-based Uniform Crime Reporting Survey which gathers data from Police Records.}, url={https://www150.statcan.gc.ca/n1/pub/85-002-x/2021001/article/00002-eng.htm}, journal={Government of Canada, Statistics Canada}, publisher={Government of Canada, Statistics Canada}, author={Moreau, Gregory}, year={2021}, month={Mar}} 
+  
+
+ @misc{NYTS, title={National Youth Tobacco Survey (NYTS)}, url={https://www.cdc.gov/tobacco/data_statistics/surveys/nyts/index.htm}, journal={Centers for Disease Control and Prevention}, publisher={Centers for Disease Control and Prevention}, year={2022}, month={Mar}} 
