--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -94,3 +94,6 @@ url = {https://www.kingsiegel.com/blog/2020/december/the-8-most-common-forms-of-
   
 
  @misc{NYTS, title={National Youth Tobacco Survey (NYTS)}, url={https://www.cdc.gov/tobacco/data_statistics/surveys/nyts/index.htm}, journal={Centers for Disease Control and Prevention}, publisher={Centers for Disease Control and Prevention}, year={2022}, month={Mar}} 
+
+@misc{pennstate-GLM, title={6.1 - Introduction to Glms: Stat 504}, url={https://online.stat.psu.edu/stat504/lesson/6/6.1}, journal={PennState: Statistics Online Courses}, publisher={PennState}} 
+  
